fix(profile): wrap for report__container and add min-width for children

--- a/components/profile/profile.scss
+++ b/components/profile/profile.scss
@@ -46,12 +46,13 @@
     &__container{
         width: 100%;
         @include box-2div(2rem);
+        flex-wrap: wrap
 
     }
     &__most-activity{
         
         @include report-box;
-        width: 280px;
+        min-width: 280px;
         direction: rtl;
  
 
@@ -76,7 +77,7 @@
         }
     }
     &__activity-chart{
-        width: 480px;
+        min-width: 480px;
         @include report-box;
         p{
             color: var(--header-h3);
@@ -87,7 +88,8 @@
         }
     }
     &__summary-activity{
-        width: 380px;
+        
+        min-width: 380px;
         @include report-box(start-end);
         height: 200px;
     }
@@ -95,6 +97,7 @@
         position: relative;
         width: 8rem;
         max-height: 8rem;
+
         img{
             width: 100%;
             height: 100%;
